--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap/css/bootstrap.min.css">
